--- a/Client/src/app/pages/shared/landing/landing.html
+++ b/Client/src/app/pages/shared/landing/landing.html
@@ -16,7 +16,7 @@
           <a [routerLink]="['/login']" class="nav-links text-gray-400 text-decoration-none">
             {{"Landing.login" |translate}}
           </a>
-          <a [routerLink]="['/register']" class="nav-links text-gray-400 text-decoration-none">
+          <a [routerLink]="['/signup']" class="nav-links text-gray-400 text-decoration-none">
             {{"Landing.register" |translate}}
           </a>
           <app-translate-select [color]="'white'"></app-translate-select>
