Implement portfolio item approval in the admin portal and automatically verify craftsmen upon reaching three approved portfolio items.

--- a/Client/src/app/components/admin/admin-nav-bar/admin-nav-bar.html
+++ b/Client/src/app/components/admin/admin-nav-bar/admin-nav-bar.html
@@ -33,7 +33,7 @@
                 <i class="fa-regular fa-plus"></i>
                 <span>{{ 'AdminNavBar.Area' | translate }}</span>
               </button>
-              <button class="dropdown-item" (click)="navigate('/approve-craftsman')">
+              <button class="dropdown-item" (click)="navigate('/approve-portfolio-item')">
                 <i class="fa-solid fa-list-check"></i>
                 <span>{{ 'AdminNavBar.Approve Craftsman' | translate }}</span>
               </button>
